# GLOC

./: .gitignore  README.md
Data/Archive/Distortion/P_0/: truth.txt  upoints.txt
Data/Basler_0000/Config/: board.xml
Data/Basler_0000/Points/: cpoints_0000.txt  cpoints_0001.txt  points_0000.txt  points_0001.txt
Data/Basler_0000/Tool_Output/: Camera_0_Extrinsic.txt  Camera_0_Intrinsic.txt  Camera_0_Points_0.txt  Camera_0_Points_1.txt  Camera_0_Points_2.txt  Camera_0_Points_3.txt  Camera_0_Points_4.txt  calibration..txt
Data/Basler_0001/Config/: board.xml
Data/Basler_0001/Distortion/: params.xml  upoints_0000.txt  upoints_0001.txt
Data/Basler_0001/Points/: points_0000.txt  points_0001.txt
Data/Basler_0001/Tool_Output/: Camera_0_Extrinsic.txt  Camera_0_Intrinsic.txt  Camera_0_Points_0.txt  Camera_0_Points_1.txt  Camera_0_Points_2.txt  Camera_0_Points_3.txt  Camera_0_Points_4.txt
Data/Calib_0000/Distortion/: params.xml  upoints_0000.txt  upoints_0001.txt
Data/Calib_0000/Points/: points_0000.txt  points_0001.txt
Data/Calib_0000/Points/Hand/: points_0000.txt  points_0001.txt
Data/Calib_0000/Tool_Output/: Camera_0_Points_2.txt  Camera_0_Points_4.txt  Camera_1_Data.txt  Camera_1_Intrinsic.txt  Camera_1_Points_0.txt  Camera_1_Points_4.txt
Data/Calib_0001/Config/: detector_params.yml
Data/Calib_0001/Distortion/: params.xml  upoints_0000.txt
Data/Calib_0001/Points/: points_0000.txt  points_0001.txt
Data/Calib_0001/Points/hand/: points_0000.txt  points_0001.txt
Data/Calib_0001/Tool_Output/: Camera_0_Points_1.txt  Camera_0_Points_2.txt  Camera_1_Extrinsic.txt  Camera_1_Points_1.txt  Camera_1_Points_4.txt  StereoCamera_01_Data.txt  calibration..txt
Data/Calibration/Distortion/: points_0000.txt
Data/Calibration/Meta/: board.xml
Data/Calibration/Tool_Output/: Calibration..txt  Camera_0_Extrinsic.txt  Camera_0_Intrinsic.txt  Camera_0_Points_0.txt  Camera_0_Points_2.txt  Camera_0_Points_3.txt  Camera_0_Points_4.txt  Camera_1_Extrinsic.txt  Camera_1_Intrinsic.txt  Camera_1_Points_0.txt  Camera_1_Points_1.txt  Camera_1_Points_2.txt  Camera_1_Points_3.txt  Camera_1_Points_4.txt  StereoCamera_0_Intrinsic.txt  StereoCamera_1_Intrinsic.txt
Data/CheapStereo/Calib_0000/Result/: Camera_0_Extrinsic.txt  Camera_0_Intrinsic.txt  Camera_0_Points_0.txt  Camera_1_Points_3.txt  calibration..txt
Data/CheapStereo/Calib_0001/Result/: Camera_0_Extrinsic.txt  Camera_0_Intrinsic.txt  Camera_0_Points_0.txt  Camera_1_Points_3.txt  StereoCamera_1_Intrinsic.txt
Data/Distortion/Meta/: PointGen.xml
Data/Distortion/P_0/: PointGen.xml
Data/UnitTest/Distortion/: Calibration.xml  params.xml  points_0001.txt  upoints_0001.txt
Data/UnitTest/Points/: points_0000.txt  points_0001.txt
Diary/: Entry_0000.md  notes.md
Tests/Calibrator/: CMakeLists.txt  Calibration.xml  HelperUtils.xml  PinholeParams.xml
Tests/Calibrator/Calibrator/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
Tests/Calibrator/CalibratorLib/: BoardParams.h  CMakeLists.txt  Calibration.h  GridPoints.cpp  GridPoints.h  HelperUtils.cpp  HelperUtils.h  InitialParams.cpp  InitialParams.h  IntrinsicProblem.cpp  IntrinsicProblem.h  LoadUtils.cpp  LoadUtils.h  PinHoleProblem.cpp  PinHoleProblem.h  PinholeParams.cpp  PinholeParams.h  RefineResult.h
Tests/Calibrator/CalibratorTests/: CMakeLists.txt
Tests/Calibrator/CalibratorTests/Helpers/: TestUtils.h
Tests/Calibrator/CalibratorTests/Tests/: Example_Tests.cpp  GridPoints_Tests.cpp  HelperUtils_Tests.cpp  InitialParams_Tests.cpp  IntrinsicProblem_Tests.cpp  LoadUtils_Tests.cpp  PinHoleProblem_Tests.cpp  PinholeParams_Tests.cpp
Tests/Calibrator/GeneratorFiles/: BoardParams.xml  Calibration.xml  GridPoints.xml  InitialParams.xml  IntrinsicProblem.xml  LoadUtils.xml  PinholeParams.xml  RefineResult.xml
Tests/Calibrator/Resources/: config.xml
Tests/Distortion_0000/: CMakeLists.txt
Tests/Distortion_0000/DFinder/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
Tests/Distortion_0000/DFinderLib/: ArgUtils.cpp  ArgUtils.h  CMakeLists.txt  CallbackBase.h  Distortion.cpp  Distortion.h  Grid.cpp  Grid.h  Homography.cpp  Homography.h  ImageCallback.cpp  ImageCallback.h  PointLoader.cpp  PointLoader.h  RandomSolver.cpp  RandomSolver.h
Tests/Distortion_0000/DFinderTests/: CMakeLists.txt
Tests/Distortion_0000/DFinderTests/Tests/: Distortion_Tests.cpp  Example_Tests.cpp  Grid_Tests.cpp  Homography_Tests.cpp  PointLoader_Tests.cpp  RandomSolver_Tests.cpp
Tests/Distortion_0000/GeneratorFiles/: CallbackBase.xml  ImageCallback.xml  PointLoader.xml
Tests/Distortion_0000/Resources/: config.xml
Tests/Distortion_0001/DFinder/: CMakeLists.txt  Engine.cpp  Engine.h
Tests/Distortion_0001/DFinderLib/: CMakeLists.txt  Distortion.cpp  Distortion.h  Grid.cpp  Grid.h  GridList.h  Homography.cpp  Homography.h  ImageCallback.cpp  ImageCallback.h  PointLoader.cpp  PointLoader.h  RandomSolver.cpp  RandomSolver.h  SaveUtils.cpp  SaveUtils.h
Tests/Distortion_0001/DFinderTests/: CMakeLists.txt
Tests/Distortion_0001/DFinderTests/Resources/: points.txt
Tests/Distortion_0001/DFinderTests/Tests/: Distortion_Tests.cpp  Grid_Tests.cpp  Homography_Tests.cpp  PointLoader_Tests.cpp  RandomSolver_Tests.cpp
Tests/Distortion_0001/GeneratorFiles/: Distortion.xml  Grid.xml  GridList.xml  Homography.xml  RandomSolver.xml  SaveUtils.xml
Tests/Distortion_0001/Resources/: config.xml
Tests/MultiCharuco/: ArgReader.h  BoardParams.h  BoardPoints.h  CMakeLists.txt  Source.cpp
Utils/BCamera/: ArgReader.h  CMakeLists.txt  Camera.cpp  Camera.h  Source.cpp
Utils/PointConvert/: ArgReader.h  Board.h  CMakeLists.txt  Grid.h  LoadUtils.cpp  LoadUtils.h  Settings.cpp  Settings.h  Source.cpp
Utils/PointConvert/GeneratorFiles/: Grid.xml
Utils/PointGen/: ArgReader.h  Arguments.h  CMakeLists.txt  Source.cpp
Utils/PointGen/GeneratorFiles/: Arguments.xml
Utils/PointGen/PointGen/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
Utils/PointGen/PointGenLib/: CMakeLists.txt
Utils/PointGen/PointGenTests/: CMakeLists.txt
Utils/PointGen/PointGenTests/Tests/: Example_Tests.cpp
(+14 files in other folders)
